Java 9/10 Compliance [JORAM-295].